k8s/app/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-billing
  namespace: oficina-billing
  labels:
    app: oficina-billing
spec:
  type: ClusterIP
  selector:
    app: oficina-billing
  ports:
    - port: 3000
      targetPort: 3000
